--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -3,41 +3,37 @@ body {
     color: teal;
 
 }
-h1, 
-h2,
-h3,
-p {
-    margin: auto;
-    text-align: center;
-    padding: 25px;
-}
 
 main {
     border: 1px solid teal;
-    width: 500px;
+    width: 25%;
+   
     margin: auto;
+    margin-top: 100px;
+    text-align: center;
     align-items: center;
-
 }
+
 .hide {
     display: none;
 }
-div {
-    padding-left: 100px;
+
+#begin,
+#questions {
+    padding: 0;
 }
+
+/* div {
+    padding-left: 100px;
+} */
 
 button {
     margin: 25px;
     margin-top: 50px;
+    align-items: center;
 }
 
-.start {
-    
-}
-.back {
-   
+#rightOrWrong {
+    font-style: italic;
 }
 
-.next {
-    margin-left: 310px;
-}
